<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:baselineAligned="false"
    android:gravity="center_vertical|fill_vertical|center_horizontal|fill_horizontal|center"
    tools:context="klicus.app.klicus.UsAndDev.DevMain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/dv_sl" />

            <TextView
                android:id="@+id/desar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/dvby"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/name_dv"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btnlinkedin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/linkedin"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/linkedin" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
