<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical"
    tools:context="klicus.app.klicus.Main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/klicuss_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clipToPadding="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_login"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/buttonDark" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="15dp"

                    android:text="@string/dont_have_account"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" tools:targetApi="lollipop"/>

                <TextView
                    android:id="@+id/txtCreateUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:elevation="15dp"
                    android:text="@string/create_here"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="bold" tools:targetApi="lollipop"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

