<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegist"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_image_profile"
        app:layout_constraintBottom_toTopOf="@+id/txtid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/txtid"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="2"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aileron"
        android:hint="@string/id"
        android:inputType="numberSigned"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtname"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="2"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aileron"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtid"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtemail"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="2"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aileron"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtname"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="150dp"
        android:layout_weight="2"
        android:fontFamily="@font/antipastopro_bold"
        android:text="@string/button_createUser"
        android:textSize="24sp"
        android:textStyle="bold"
        android:theme="@style/buttonDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtemail" />

</android.support.constraint.ConstraintLayout>