<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical"
    tools:context="klicus.app.klicus.ActivityMain">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="334dp"
        android:layout_height="278dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="2"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/klicus_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/antipastopro_medium"
            android:padding="20dp"
            android:text="@string/text_button_login"
            android:textSize="22sp"
            android:textStyle="bold"
            android:theme="@style/buttonDark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="15dp"
                android:text="@string/dont_have_account"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="@font/aileron"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/txtCreateUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:elevation="15dp"
                android:text="@string/create_here"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="@font/antipastopro_bold"
                tools:targetApi="lollipop" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
